# typenums

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  b  package.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.4.3.yaml  stack-8.6.1.yaml  stack.yaml  typenums.cabal
.github/workflows/: haskell-ci.yml
src/: Test.hs  Typenums.hs
src/Data/: TypeInts.hs  TypeLits.hs  TypeNums.hs  TypeRats.hs
src/Data/TypeNums/: Arithmetic.hs  Comparison.hs  Equality.hs  Internal.hs  Ints.hs  Rats.hs
src/Data/TypeNums/Arithmetic/: Internal.hs
src/Data/TypeNums/Rats/: Type.hs
test/: Spec.hs  TestUtil.hs
test/Data/TypeNums/: ArithmeticSpec.hs  ComparisonSpec.hs  EqualitySpec.hs  IntsSpec.hs  RatsSpec.hs
