name:                typenums
version:             0.0.0
description:         Type level numbers using existing Nat functionality
synopsis:            Type level numbers using existing Nat functionality
homepage:            https://github.com/adituv/typenums
bug-reports:         https://github.com/adituv/typenums/issues
license:             BSD3
license-file:        LICENSE
author:              AdituV
maintainer:          aditu.venyhandottir@gmail.com
copyright:           2018 AdituV
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Typenums
                       
  ghc-options:         -Wall
  build-depends:       base
                     
  default-language:    Haskell2010
  

test-suite typenums-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typenums
                     
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  

source-repository head
  type:                git
  location:            https://github.com/adituv/typenums.git

